fix editor expanding on mobile
Here to prove you don't need to be a multimillion dollar company to build good shit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,8 +100,13 @@ a, a:visited {
     max-width: 800px;
 }
 
-@media (min-width: 991px) {
+@media (min-width: 992px) {
     .wafrn-container {
         margin-left: 360px;
     }
+}
+
+.p-dialog {
+    max-width: 768px;
+    width: 100%;
 }
